--- a/Monali-Traders-Vite/src/Pages/Home/FAQ-section/Questions.css
+++ b/Monali-Traders-Vite/src/Pages/Home/FAQ-section/Questions.css
@@ -45,3 +45,40 @@
     align-content: center;
     margin-top:-50px;
 }
+
+@media (max-width:400px){
+    .questions-section{
+        display: flex;
+        flex-direction: column;
+    }
+    .question-main-title-container{
+        margin: 0%;
+        padding: 0%;
+        display: flex;
+        flex-direction: column;
+        width: 95vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .question-main-title{
+        font-size: 40px;
+        text-align: center;
+
+    }
+    .FAQ-logo{
+        width: 70px;
+        height: 35px;
+        margin-top: -20px;
+        padding: 0%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    .faq{
+        margin: 0%;
+        padding: 0%;
+        font-size: 17px;
+
+    }
+
+}
