--- a/Monali-Traders-Vite/src/Pages/contact-page/contact.css
+++ b/Monali-Traders-Vite/src/Pages/contact-page/contact.css
@@ -67,6 +67,7 @@
     flex-direction: column;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    margin-bottom: 150px;
 
 }
 
