--- a/Monali-Traders-Vite/src/components/NavBar/NavBar.css
+++ b/Monali-Traders-Vite/src/components/NavBar/NavBar.css
@@ -10,12 +10,12 @@
     flex-direction: row;
     font-family: 'Roboto','sans-serif';
     gap:20px;
-    margin-top: 45px;
+    margin-top: 40px;
 }
 
 .nav-link{
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     font-weight: 400;
 
@@ -24,15 +24,16 @@
 .logo-img{
     width:97px;
     height: 77px;
+    margin-top: 15px;
+
 }
 
 .logo-container{
-    margin-top: 19px;
     margin-left: 37px;
 }
 
 .contact-btn{
-    font-size: 15px;
+    font-size: 14px;
     width: 118px;
     height: 39px;
     background-color: white;
@@ -42,5 +43,85 @@
     margin-right: 45px;
     margin-top: 33px;
     cursor: pointer;
-    font-weight: 500;
+    font-weight: 400;
+    font-family: 'Roboto',sans-serif;
+}
+
+@media (max-width:400px){
+    .logo-img{
+        height: 40px;
+        width: 50px;
+        margin-top: 10px;
+
+    }
+    .logo-container{
+        margin-left: 10px;
+
+    }
+    .nav-link{
+        font-size: 14px;
+    }
+    .nav-link-container{
+        gap:10px;
+        margin-top: 25px;
+    }
+    .contact-btn{
+        font-size: 10px;
+        width: 75px;
+        height: 25px;
+        margin-right: 5px;
+        margin-top: 21px;
+    }
+}
+
+@media (min-width: 1000px) and (max-width: 1200px){
+
+}
+
+@media (min-width: 768px) and (max-width: 999px) {
+    .nav-link{
+        font-size: 16px;
+    }
+    .logo-img{
+        width: 80px;
+        height: 70px;
+    }
+    .contact-btn{
+        height: 33px;
+        font-size: 14px;
+        margin-right: 5px;
+
+    }
+  }
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .nav-link{
+        font-size: 16px;
+    }
+}
+
+@media (min-width:400px) and (max-width:575px) {
+    .nav-link{
+        font-size: 15px;
+    }
+    .logo-img{
+        height: 50px;
+        width: 60px;
+    }
+    .contact-btn{
+        height: 33px;
+        width: 100px;
+        margin-right: 13px;
+        margin-top: 24px;
+
+        font-size: 13px;
+    }
+
+    .logo-container{
+        margin-left: 10px;
+    }
+    .nav-link-container{
+        margin-top: 32px;
+
+    }
 }
