--- a/Monali-Traders-Vite/src/Pages/Home/FAQ-section/Questions.css
+++ b/Monali-Traders-Vite/src/Pages/Home/FAQ-section/Questions.css
@@ -1,15 +1,16 @@
 .questions-section{
-    height: 642px;
     background-color: #FFEED1;
     display: flex;
     flex-direction: row;
+    height: auto;
+    padding-bottom: 20px;
 }
 
 .question-main-title-container{
     width: 445px;
     height: 229px;
     margin-left: 127px;
-    padding-top: 125px;
+    padding-top:15px;
 
 }
 
@@ -25,7 +26,7 @@
 
 .dropdown-section{
     width: 784px;
-    height: 395px;
+    height: auto;
     margin: auto;
 }
 
@@ -46,10 +47,137 @@
     margin-top:-50px;
 }
 
+@media (min-width: 1000px) and (max-width: 1200px) {
+    .question-main-title-container{
+        width: 445px;
+        height: 429px;
+        margin-left: 30px;
+        padding-top: 40px;
+    }
+    
+    .question-main-title{
+        font-size: 68px;
+        
+    }
+}
+
+@media (min-width: 768px) and (max-width: 999px) {
+    .questions-section{
+        display: flex;
+        flex-direction: column;
+    }
+    .question-main-title-container{
+        margin: 0%;
+        padding: 0%;
+        display: flex;
+        flex-direction: column;
+        width: 95vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .question-main-title{
+        font-size: 65px;
+        text-align: center;
+
+    }
+    .FAQ-logo{
+        width: 80px;
+        height: 45px;
+        margin-top: -35px;
+        padding: 0%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    .faq{
+        margin: 0%;
+        padding: 0%;
+        font-size: 19px;
+
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .questions-section{
+        display: flex;
+        flex-direction: column;
+    }
+    .question-main-title-container{
+        margin: 0%;
+        padding: 0%;
+        display: flex;
+        flex-direction: column;
+        width: 92vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .question-main-title{
+        font-size: 53px;
+        text-align: center;
+
+    }
+    .FAQ-logo{
+        width: 70px;
+        height: 35px;
+        margin-top: -35px;
+        padding: 0%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    .faq{
+        margin: 0%;
+        padding: 0%;
+        font-size: 17px;
+
+    }
+}
+
+
+
+@media (min-width:400px) and (max-width:575px) {
+    .questions-section{
+        display: flex;
+        flex-direction: column;
+    }
+    .question-main-title-container{
+        margin: 0%;
+        padding: 0%;
+        display: flex;
+        flex-direction: column;
+        width: 92vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .question-main-title{
+        font-size: 53px;
+        text-align: center;
+
+    }
+    .FAQ-logo{
+        width: 70px;
+        height: 35px;
+        margin-top: -35px;
+        padding: 0%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    .faq{
+        margin: 0%;
+        padding: 0%;
+        font-size: 17px;
+
+    }
+}
+
+
 @media (max-width:400px){
     .questions-section{
         display: flex;
         flex-direction: column;
+        height: auto;
+        padding-bottom: 20px;
     }
     .question-main-title-container{
         margin: 0%;
