--- a/Monali-Traders-Vite/src/Pages/Home/Services section/services.css
+++ b/Monali-Traders-Vite/src/Pages/Home/Services section/services.css
@@ -69,6 +69,141 @@
     background-position: center;
 
 }
+.pricing-title{
+    margin-top: 85px;
+}
+
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+    .service-title{
+        margin-left: 10px;
+    }
+    .services-main-title{
+        font-size: 90px;
+    }
+}
+
+@media (min-width: 901px) and (max-width: 999px) {
+    .services-section{
+        min-height: 1250px;
+
+    }
+    .services-main-title{
+        font-size: 80px;
+        height: 90px;
+    }
+    .service-title{
+        font-size: 43px;
+        margin-left: 10px;
+        text-align: center
+    }
+    .service-description{
+        font-size: 20px;
+        width: 550px;
+
+    }
+    .pricing-title{
+        margin-top: 85px;
+    }
+  }
+
+
+@media (min-width: 576px) and (max-width: 900px) {
+    .services-section{
+        min-height: 1100px;
+    }
+    .services-main-title{
+        font-size: 65px;
+        margin: 0%;
+        height: 100px;
+
+    }
+    .service-container{
+        margin:0 ;
+        display: flex;
+        flex-direction: column;
+        min-height: 170px;
+        margin-bottom: 25px;
+    }
+    .service-description{
+        font-size: 23px;
+        line-height: 150%;
+        width: 90vw;
+        text-align: justify;
+        margin: 0%;
+        margin-left: auto;
+        margin-right: auto;
+        min-height: 185px;
+        padding-bottom: 15px;
+        hyphens: auto;
+
+    }
+    .services-img{
+        display: none;
+    }
+    .service-title{
+        font-size: 43px;
+        max-width: 96vw;
+        margin: 0%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        padding-top:15px;
+        min-height: 30px;
+        margin-bottom: 5px;
+
+    }
+}
+
+
+
+@media (min-width:400px) and (max-width:575px) {
+    .services-section{
+        min-height: 1100px;
+    }
+    .services-main-title{
+        font-size: 55px;
+        margin: 0%;
+        height: 100px;
+
+    }
+    .service-container{
+        margin:0 ;
+        display: flex;
+        flex-direction: column;
+        min-height: 170px;
+        margin-bottom: 15px;
+    }
+    .service-description{
+        font-size: 20px;
+        line-height: 150%;
+        width: 90vw;
+        text-align: justify;
+        margin: 0%;
+        margin-left: auto;
+        margin-right: auto;
+        min-height: 185px;
+        padding-bottom: 10px;
+        hyphens: auto;
+
+    }
+    .services-img{
+        display: none;
+    }
+    .service-title{
+        font-size: 40px;
+        max-width: 96vw;
+        margin: 0%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        padding-top:15px;
+        min-height: 30px;
+        margin-bottom: 5px;
+
+    }
+}
+
 
 /*Small mobile*/
 @media (max-width:400px){
