--- a/Monali-Traders-Vite/src/Pages/Products-page/Products.css
+++ b/Monali-Traders-Vite/src/Pages/Products-page/Products.css
@@ -2,23 +2,15 @@
     margin-left: 43px;
 }
 
-.category-container{
-    width: 90%;
-    height: 64px;
-    background-color: #FF4747;
-    border-radius: 10px;
-    margin-top: 29px;
+@media (min-width:400px) and (max-width:575px) {
+    .product-session{
+        margin-left: 10px;
+    }
 }
 
-.category{
-    font-family: 'Teko',sans-serif;
-    font-size: 36px;
-    font-weight: 500;
-    color: white;
-    margin-right: auto;
-    height: 100%;
-    /* width: 420px; */
-    text-align: left;
-    align-content: center;
-    padding-left: 15px;
+@media (max-width: 400px) {
+    .product-session{
+        margin-left: 10px;
+    }
+    
 }
