--- a/Monali-Traders-Vite/src/index.css
+++ b/Monali-Traders-Vite/src/index.css
@@ -68,6 +68,7 @@ button:focus-visible {
 } */
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 
 
