--- a/Monali-Traders-Vite/src/components/NavBar/NavBar.css
+++ b/Monali-Traders-Vite/src/components/NavBar/NavBar.css
@@ -18,7 +18,12 @@
     font-size: 18px;
     color: white;
     font-weight: 400;
+    cursor: pointer;
+}
 
+.nav-link:hover{
+    color: white;
+    border-bottom:2px solid white;    
 }
 
 .logo-img{
