--- a/Monali-Traders-Vite/src/Pages/Home/FAQ-section/Questions.css
+++ b/Monali-Traders-Vite/src/Pages/Home/FAQ-section/Questions.css
@@ -2,7 +2,7 @@
     background-color: #FFEED1;
     display: flex;
     flex-direction: row;
-    height: auto;
+    min-height: 500px;
     padding-bottom: 20px;
 }
 
@@ -10,7 +10,7 @@
     width: 445px;
     height: 229px;
     margin-left: 127px;
-    padding-top:15px;
+    padding-top:55px;
 
 }
 
