--- a/Monali-Traders-Vite/src/index.css
+++ b/Monali-Traders-Vite/src/index.css
@@ -70,6 +70,9 @@ button:focus-visible {
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+
 
 
 
